# ioflow

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: bridge_client.rs  config.rs  main.rs  poller.rs  register.rs  runner.rs
crates/backend/: Cargo.toml
crates/backend/src/: config.rs  main.rs
crates/backend/src/routes/: agents.rs  jobs.rs  ladder.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/com-bridge/: Cargo.toml
crates/com-bridge/src/: main.rs
crates/com-bridge/src/com/: mod.rs  ude.rs
crates/plcopen/: Cargo.toml
crates/plcopen/examples/: preview.rs
crates/plcopen/src/: error.rs  lib.rs  parser.rs  semantic_diff.rs  types.rs
crates/plcopen/src/renderer/: diff.rs  mod.rs  svg.rs
crates/shared/: Cargo.toml
crates/shared/src/: bridge.rs  job.rs  lib.rs  protocol.rs
crates/stu-vcs/: Cargo.toml
crates/stu-vcs/src/: commit.rs  diff.rs  error.rs  hash.rs  lib.rs  objects.rs  repo.rs  stu.rs  tree.rs
crates/stu-vcs/tests/: vcs.rs
docs/decisions/: 001-com-bridge-x86.md  002-plcopen-parser.md  003-ci-pipeline.md  004-stu-vcs.md  005-tests-stu-vcs.md  006-ioflow-status.md  007-ioflow-config.md  008-qualite-erreurs-vcs.md  009-backend-sqlx-pool.md  010-agent-register-org-id.md  011-ladder-svg-renderer.md  012-bloc5-diff-textuel-semantique.md
migrations/: 0001_init.sql  0002_plcopen_snapshots.sql
web/templates/: dashboard.html
