[workspace]
members = [
    "crates/shared",
    "crates/backend",
    "crates/agent",
    "crates/com-bridge",
    "crates/plcopen",
    "crates/stu-vcs",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
shared      = { path = "crates/shared" }
plcopen     = { path = "crates/plcopen" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
roxmltree   = "0.20"
thiserror   = "2"
sha2        = "0.10"
hex         = "0.4"
zip         = "2"
clap        = { version = "4", features = ["derive"] }
stu-vcs     = { path = "crates/stu-vcs" }
