[package]
name    = "agent"
version.workspace = true
edition.workspace = true

[dependencies]
shared     = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

reqwest  = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy  = "0.15"
