[package]
name    = "stu-vcs"
version.workspace = true
edition.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
zip        = { workspace = true }
similar    = "2"

[dev-dependencies]
tempfile = "3"
